add maven test for jacoco : omidashouri : 98.07.25